--- a/Dispel.CommandLine/Dispel.CommandLine.csproj
+++ b/Dispel.CommandLine/Dispel.CommandLine.csproj
@@ -1,19 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dispel\Dispel.csproj" />
     <PackageReference Include="System.CommandLine" Version="0.1.0-e170912-3" />
   </ItemGroup>
 </Project>
