--- a/Dispel.Web/Dispel.Web.csproj
+++ b/Dispel.Web/Dispel.Web.csproj
@@ -2,10 +2,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+    <ProjectReference Include="..\Dispel\Dispel.csproj" />
   </ItemGroup>
 </Project>
