--- a/Dispel/Dispel.csproj
+++ b/Dispel/Dispel.csproj
@@ -2,4 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="style.css" />
+  </ItemGroup>
 </Project>
