--- a/Dispel.Web/Dispel.Web.csproj
+++ b/Dispel.Web/Dispel.Web.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <ProjectReference Include="..\Dispel\Dispel.csproj" />
   </ItemGroup>
 </Project>
