config file with aliasing options

--- a/Dispel.CommandLine/Dispel.CommandLine.csproj
+++ b/Dispel.CommandLine/Dispel.CommandLine.csproj
@@ -8,5 +8,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Dispel\Dispel.csproj" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
   </ItemGroup>
 </Project>
